--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon src/app.js"
   },
   "author": "aranorj",
   "license": "ISC",
@@ -16,4 +16,4 @@
   "dependenciesDev": {
     "nodemon": "^4.18.1"
   }
-
+}
