fix: add footer color into general styles

--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
   "author": "aranorj",
   "license": "ISC",
   "dependencies": {
-
-    "express": "^4.18.1"   
+    "express": "^4.18.1",
+    "nodemon": "^2.0.16"
   },
-  
   "dependenciesDev": {
     "nodemon": "^4.18.1"
   }
